@@ -1059,6 +1059,7 @@ $EMACS -Q --batch --eval "(message (emacs-version))" --eval "(when (featurep 'py
 -eval "(assert (boundp 'py-font-lock-syntactic-keywords) nil \"py-font-lock-syntactic-keywords not a variable\")" \
 -eval "(assert (boundp 'virtualenv-name) nil \"virtualenv-name not a variable\")" \
 --funcall py-up-test-python-el-111-test \
+--funcall py-down-python-el-112-test \
 --funcall py-moves-test \
 --funcall enter-key-does-not-indent-properly-after-return-statement-lp-1098793-test \
 --funcall filename-completion-fails-in-ipython-lp-1027265-n1-test \
